force-app/main/default/objects/AVO_Meter_Withdrawal__c/AVO_Meter_Withdrawal__c.object-meta.xml
<CustomObject>
    <label>Meter Withdrawal</label>
    <nameField>
        <label>Meter Withdrawal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meter Withdrawals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>