force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/AVO_Delete_Association__c.field-meta.xml
<CustomField>
    <fullName>AVO_Delete_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Association</label>
    <type>Checkbox</type>
</CustomField>