force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/AVO_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>