force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/AVO_Initiating_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Initiating_Transaction_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiating Transaction ID</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Meter Withdrawals (Initiating Transaction ID)</relationshipLabel>
    <relationshipName>Meter_Withdrawals9</relationshipName>
    <type>Lookup</type>
</CustomField>