force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/AVO_Meter_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Installation_Status__c</fullName>
    <formula>TEXT(AVO_Meter_ID__r.AVO_Meter_Installation_Status__c)</formula>
    <label>Meter Installation Status</label>
    <type>Text</type>
</CustomField>