force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/AVO_Meter_Update_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Update_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Update ID</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Meter Withdrawals (New)</relationshipLabel>
    <relationshipName>Meter_Withdrawals</relationshipName>
    <type>Lookup</type>
</CustomField>