force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/AVO_Pending_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pending_Transaction_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pending Transaction ID</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Meter Withdrawals (Pending Transaction ID)</relationshipLabel>
    <relationshipName>Meter_Withdrawals2</relationshipName>
    <type>Lookup</type>
</CustomField>