force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/AVO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>