force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/AVO_TableFrom__c.field-meta.xml
<CustomField>
    <fullName>AVO_TableFrom__c</fullName>
    <label>AVO_TableFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>