force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/AVO_Terminating_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Terminating_Transaction_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terminating Transaction ID</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Meter Withdrawals (Terminating Transaction ID)</relationshipLabel>
    <relationshipName>Meter_Withdrawals1</relationshipName>
    <type>Lookup</type>
</CustomField>