force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/Issued_Number__c.field-meta.xml
<CustomField>
    <fullName>Issued_Number__c</fullName>
    <description>Filled in when a permanent sequence number is issued. This prevents subsequent triggering of the sequence number code.</description>
    <label>Issued No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>