force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/Test_field__c.field-meta.xml
<CustomField>
    <fullName>Test_field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test_field</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Meter Withdrawals (Test_field)</relationshipLabel>
    <relationshipName>Meter_Withdrawals_Test</relationshipName>
    <type>Lookup</type>
</CustomField>