force-app/main/default/objects/AVO_Meter_Withdrawal__c/fields/Test_Meter_ID__c.field-meta.xml
<CustomField>
    <fullName>Test_Meter_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Meter ID</label>
    <referenceTo>AVO_Meter__c</referenceTo>
    <relationshipLabel>Meter Withdrawals (Test Meter ID)</relationshipLabel>
    <relationshipName>Meter_Withdrawals1</relationshipName>
    <type>Lookup</type>
</CustomField>