force-app/main/default/objects/AVO_Meter_Withdrawal__c/recordTypes/Meter_Withdrawal.recordType-meta.xml
<RecordType>
    <fullName>Meter_Withdrawal</fullName>
    <active>true</active>
    <label>Meter Withdrawal</label>
</RecordType>